[package]
name = "orbidata"
version = "0.1.0"
edition = "2021"
description = "Normalized TLE + CDM orbital data API — commercial SDA data pipeline"
license = "MIT"
repository = "https://github.com/tbar4/orbidata"
keywords = ["space", "tle", "orbital", "satellite", "sda"]
categories = ["science", "api-bindings", "web-programming::http-server"]

[[bin]]
name = "orbidata"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4", "serde"] }
